# mati

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ENRICHMENT.md  LICENSE  README.md  SECURITY.md  TRADEMARK.md  deny.toml  install.sh  mati-mcp.json  mati.json
.cargo/: config.toml
.config/: nextest.toml
.cursor/: mcp.json
.github/workflows/: ci.yml  release.yml
Formula/: mati.rb
benches/: graph_bench.rs  layer0_bench.rs  parser_bench.rs  search_bench.rs  store_bench.rs
docs/: REAL_LIFE_TEST_REPORT_M11.md  TEST_REPORT.md  marketplace-submission.md
scripts/: check-all.sh  codesign-proc-macros.sh  install-git-hooks.sh  measure-build-log-pressure.sh  rustc-wrapper-codesign.sh  safe-build.sh
src/: eval.rs  lib.rs  main.rs  policy.rs
src/analysis/: blast_radius.rs  claude_md.rs  clusters.rs  deps.rs  edges.rs  git.rs  mod.rs  onboarding.rs  parser.rs  propagation.rs  reparse.rs  walker.rs
src/analysis/enrich_signals/: c.rs  comments.rs  cpp.rs  elixir.rs  go.rs  haskell.rs  java.rs  javascript.rs  mod.rs  python.rs  ruby.rs  rust.rs  scala.rs  typescript.rs
src/analysis/parser/: c.rs  cpp.rs  elixir.rs  go.rs  haskell.rs  import.rs  java.rs  mod.rs  python.rs  ruby.rs  rust.rs  scala.rs  typescript.rs
src/analysis/resolvers/: c.rs  cpp.rs  elixir.rs  go.rs  haskell.rs  java.rs  mod.rs  python.rs  ruby.rs  rust.rs  scala.rs  typescript.rs
src/cli/: check.rs  clusters.rs  colors.rs  config.rs  daemon.rs  diff.rs  doctor.rs  enrich.rs  eval.rs  explain.rs  extract_signals.rs  gaps.rs  gotcha.rs  hook_decide.rs  hooks.rs  init.rs  mod.rs  policy.rs  proxy.rs  repair.rs  reparse.rs  review.rs  sandbox.rs  search.rs  show.rs  stale.rs  stats.rs  status.rs  subagent_context.rs  suggest.rs  supervisor.rs  verify_chain.rs  verify_evidence.rs
src/graph/: edges.rs  graph.rs  mod.rs
src/health/: confidence.rs  enrichment.rs  gaps.rs  mod.rs  onboarding.rs  quality.rs  staleness.rs
src/hooks/: claude_stop.rs  codex_post_bash.rs  codex_pre_apply_patch.rs  codex_pre_bash.rs  codex_session_start.rs  codex_stop.rs  codex_user_prompt.rs  compliance.rs  decide.rs  mod.rs  post_compact.rs  post_compliance.rs  post_edit.rs  post_memget.rs  pre_bash.rs  pre_compact.rs  pre_edit.rs  pre_read.rs  session_end.rs  subagent_start.rs
src/mcp/: daemon_lifecycle.rs  dispatch_v2.rs  handlers.rs  metadata.rs  metrics.rs  mod.rs  protocol.rs  server.rs  tools.rs  types.rs
src/scaffold/: claude_md.rs  codex.rs  mod.rs  settings.rs
src/search/: index.rs  mod.rs
src/store/: db.rs  durability.rs  enforcement.rs  extraction.rs  gotcha_ops.rs  migrations.rs  mod.rs  negative_exemplar.rs  record.rs  repair.rs  session.rs
tests/: blast_radius_fixtures.rs  cli_ergonomics.rs  cluster_repair_diag.rs  concurrent_socket.rs  crash_recovery.rs  daemon_lifecycle.rs  e2e.rs  enforcement_tests.rs  eval_corpus.rs  hook_decide_integration.rs  init_codeowners.rs  mcp_stdio.rs  metrics_e2e.rs  output_regression.rs  panic_hook_preopen.rs  proxy_overhead_e2e.rs  real_world_verification.rs  resolver_fixtures.rs  rust_resolver_regression.rs  search_cli.rs  smoke_real_repo.rs  suggest_cli.rs  surrealkv_tx_size_spike.rs
tests/fixtures/eval/: baseline.json
tests/fixtures/eval/decision/: cases.json
tests/fixtures/eval/detection/: adversarial.json  benign.json  known_good.json
tests/fixtures/resolver/c/simple_project/: auth.c  auth.h  db.c  db.h  expected.json  main.c
tests/fixtures/resolver/cpp/simple_project/: auth.cpp  auth.hpp  db.cpp  db.hpp  expected.json  main.cpp
tests/fixtures/resolver/elixir/acronym_project/: expected.json
tests/fixtures/resolver/elixir/acronym_project/lib/: my_app.ex
tests/fixtures/resolver/elixir/acronym_project/lib/my_app/: http_server.ex  xml_parser.ex
tests/fixtures/resolver/elixir/simple_project/: expected.json
tests/fixtures/resolver/elixir/simple_project/lib/: my_app.ex
tests/fixtures/resolver/elixir/simple_project/lib/my_app/auth/: session.ex  user_service.ex
tests/fixtures/resolver/elixir/simple_project/lib/my_app/db/: client.ex
tests/fixtures/resolver/go/simple_module/: expected.json  go.mod  main.go
tests/fixtures/resolver/go/simple_module/auth/: session.go  user.go
tests/fixtures/resolver/go/simple_module/db/: client.go
tests/fixtures/resolver/haskell/simple_project/: expected.json
tests/fixtures/resolver/haskell/simple_project/src/: Main.hs
tests/fixtures/resolver/haskell/simple_project/src/MyApp/Auth/: UserService.hs
tests/fixtures/resolver/haskell/simple_project/src/MyApp/Db/: Client.hs
tests/fixtures/resolver/java/simple_project/: expected.json
tests/fixtures/resolver/java/simple_project/src/main/java/com/acme/app/: Main.java
tests/fixtures/resolver/java/simple_project/src/main/java/com/acme/auth/: Session.java  UserService.java
tests/fixtures/resolver/java/simple_project/src/main/java/com/acme/db/: DbClient.java
tests/fixtures/resolver/python/app/: main.py  services.py  utils.py
tests/fixtures/resolver/python/pkg/: shared.py
tests/fixtures/resolver/ruby/simple_project/: expected.json
tests/fixtures/resolver/ruby/simple_project/lib/: auth.rb  db.rb  main.rb
tests/fixtures/resolver/rust/src/: lib.rs
tests/fixtures/resolver/rust/src/store/: helpers.rs  mod.rs
tests/fixtures/resolver/rust/workspace_project/: Cargo.toml
tests/fixtures/resolver/rust/workspace_project/crates/bar/src/: lib.rs  util.rs
tests/fixtures/resolver/rust/workspace_project/crates/foo/src/: helper.rs  lib.rs
tests/fixtures/resolver/scala/simple_project/: expected.json
tests/fixtures/resolver/scala/simple_project/src/main/scala/com/acme/: Main.scala
tests/fixtures/resolver/scala/simple_project/src/main/scala/com/acme/auth/: UserService.scala
tests/fixtures/resolver/scala/simple_project/src/main/scala/com/acme/db/: DbClient.scala
tests/fixtures/resolver/typescript/src/: app.ts
tests/fixtures/resolver/typescript/src/components/: button.tsx  index.ts
