[package]
name        = "mati"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.82"
description = "Engineering knowledge that survives turnover"
license     = "MIT"
repository  = "https://github.com/mati-dev/mati"
homepage    = "https://mati.dev"
documentation = "https://docs.mati.dev"
keywords    = ["ai", "mcp", "claude", "knowledge", "developer-tools"]
categories  = ["command-line-utilities", "development-tools"]
exclude     = [".claude/", "docs/", "*.md"]

# ─────────────────────────────────────────────
# Targets
# ─────────────────────────────────────────────

[[bin]]
name = "mati"
path = "src/main.rs"

[[bin]]
name    = "bench_real"
path    = "src/bin/bench_real/main.rs"

[lib]
name = "mati_core"
path = "src/lib.rs"

# ─────────────────────────────────────────────
# Features
# ─────────────────────────────────────────────

[features]
default = []

# opt-in: mati enable-semantic
# downloads all-MiniLM-L6-v2 (23MB quantized), builds HNSW index
semantic = [
    "dep:candle-core",
    "dep:candle-transformers",
    "dep:candle-nn",
    "dep:usearch",
    "dep:hf-hub",
    "dep:tokenizers",
]

# ─────────────────────────────────────────────
# Dependencies
# ─────────────────────────────────────────────

[dependencies]

# --- Storage (P1 — structural enforcement foundation) ---
# Pure-Rust LSM-tree KV. MVCC, ACID, time-travel, single file.
# Selected over redb: native versioning + time-travel queries.
surrealkv = "0.21"

# --- Graph (in-memory, edges persisted to SurrealKV) ---
# Layer 0 builds 800-1200 edges at init.
petgraph = { version = "0.8.3", features = ["serde-1"] }

# --- Full-text search (default mem_query mode) ---
# BM25 over all record values. Best-in-class Rust, Lucene-quality.
tantivy = "0.25.0"

# --- Semantic search (opt-in via `semantic` feature) ---
# Fully offline, zero API cost. 95% of queries satisfied by tantivy without it.
candle-core         = { version = "0.9.2", optional = true }
candle-transformers = { version = "0.9.2", optional = true }
candle-nn           = { version = "0.9.2", optional = true }
usearch             = { version = "2.24", optional = true }       # HNSW index
hf-hub              = { version = "0.5.0", optional = true }        # model download
tokenizers          = { version = "0.22.2", optional = true }

# --- Static analysis (Layer 0) ---
# Incremental parser, same API across all languages.
# All grammar crates must match the tree-sitter major version — links conflict otherwise.
# NOTE: C parsers require build.rs — see build.rs for cc compilation.
tree-sitter        = "0.23"
tree-sitter-rust   = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go     = "0.23"
tree-sitter-java   = "0.23"
tree-sitter-c      = "0.23"
tree-sitter-cpp    = "0.23"
tree-sitter-ruby   = "0.23"
# tree-sitter-kotlin: excluded — latest (0.3.8) requires tree-sitter <0.23.
# Re-add when upstream targets tree-sitter 0.23+.
tree-sitter-scala  = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-haskell = "0.23"
# NOTE: tree-sitter-swift and tree-sitter-c-sharp are maintained separately.
# Add once stable bindings land — tracked in GOTCHAS.md.

# --- File walking ---
# Respects .gitignore natively. Same crate as ripgrep.
# Benchmark: Linux kernel (70k files) ~140ms.
ignore = "0.4.25"

# --- Parallel processing ---
# Work-stealing. Repo scan <100ms on typical projects.
rayon = "1.11.0"

# --- Git history mining ---
# change_frequency, co_change_pairs, hotspot detection.
# default-features = false: skip vendored libgit2, use system.
git2 = { version = "0.20.4", default-features = false, features = ["vendored-openssl"] }

# --- MCP stdio server (P3 — three tools hard constraint) ---
# Rust MCP SDK, stdio transport, <10ms startup.
rmcp = { version = "1.2.0", features = ["server", "transport-io"] }

# --- JSON Schema generation (required by rmcp tool parameters) ---
schemars = "1.0"

# --- CLI ---
clap         = { version = "4.6.0", features = ["derive", "env", "color", "wrap_help"] }
comfy-table  = "7.2.2"
dialoguer    = { version = "0.11", features = ["fuzzy-select"] }
indicatif    = "0.17"

# --- Async runtime ---
# Full features — hooks run async, Layer 1 uses buffer_unordered(3).
tokio = { version = "1.50.0", features = ["full"] }

# --- Serialization ---
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rmp-serde  = "1.3"    # MessagePack — KV wire format (3-5x faster deser, 40% smaller)
toml_edit  = "0.23.7"

# --- Error handling ---
anyhow    = "1.0.102"
thiserror = "2.0.18"

# --- Logging ---
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "ansi"] }

# --- Utilities ---
chrono  = { version = "0.4.44", features = ["serde"] }     # timestamps
uuid    = { version = "1.22.0", features = ["v4", "serde"] } # device_id
dirs    = "6.0.0"                                            # ~/.mati/<slug>/
slugify = "0.1.0"                                          # project slug from path
sha2    = "0.10.9"                                         # analytics:last_enrich_sha
hex     = "0.4.3"
once_cell = "1.21.4"                                          # lazy static init
libc = "0.2.183"

# ─────────────────────────────────────────────
# Dev dependencies
# ─────────────────────────────────────────────

[dev-dependencies]
tempfile    = "3.27.0"        # temp SurrealKV trees in tests
assert_cmd  = "2.2.0"        # CLI integration tests
predicates  = "3.1.4"        # assert_cmd matchers
insta       = "1.46.3"        # snapshot testing for mati stats output
criterion   = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "graph_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "layer0_bench"
harness = false

# ─────────────────────────────────────────────
# Build profiles
# ─────────────────────────────────────────────

[profile.release]
opt-level     = 3
lto           = "thin"    # fat LTO adds 3x build time for <5ms runtime gain — not worth it
codegen-units = 1
strip         = true      # strip debug symbols — smaller binary, faster load

[profile.dev]
opt-level = 1             # faster incremental builds, enough for tree-sitter

[profile.test]
opt-level = 1

# ─────────────────────────────────────────────
# Build script note
# ─────────────────────────────────────────────
# build.rs compiles all tree-sitter C parsers via the `cc` crate.
# Add `cc = "1"` to [build-dependencies] when adding a new grammar.
# See: https://tree-sitter.github.io/tree-sitter/creating-parsers

# ─────────────────────────────────────────────
# cargo-binstall metadata
# ─────────────────────────────────────────────
# Enables: cargo binstall mati
# Resolves the correct pre-built binary for the host platform.

[package.metadata.binstall]
pkg-url  = "https://github.com/ioni-dev/mati/releases/download/v{ version }/mati-{ target }.tar.gz"
bin-dir  = "mati"
pkg-fmt  = "tgz"
